<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wave">

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="end"
        android:src="@drawable/bg_recover" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        android:textColor="#00cba9"
        android:fontFamily="@font/abeezee"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:text="@string/recover_title"
        android:textColor="#BDB4B4"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:fontFamily="@font/abeezee"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edt"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="#3949AB" />

    <Button
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:padding="12dp"
        android:id="@+id/khoiphuc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/reset_bt"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>