<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wave"
    android:orientation="vertical"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_ava"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="#00cba9"
        android:maxLines="2"
        android:textAlignment="center"
        android:fontFamily="@font/abeezee"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:fontFamily="@font/abeezee"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edt"
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_my_profile"
        android:drawableTint="#00cba9"
        android:drawablePadding="10dp"
        android:hint="@string/input_name"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="#3949AB"/>

    <EditText
        android:fontFamily="@font/abeezee"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edt"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="#3949AB" />

    <Button
        android:fontFamily="@font/abeezee"
        android:textSize="18sp"
        android:id="@+id/update"
        android:textAllCaps="false"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/update_infor"
        android:textColor="#fff"
        android:textStyle="bold" />
</LinearLayout>