<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wave"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="start"
        android:src="@drawable/bg_signup" />

    <TextView
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_signup"
        android:textColor="#00cba9"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:text="@string/sign_up_title"
        android:textColor="#BDB4B4"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:textColorHint="#609097"
        android:fontFamily="@font/abeezee"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edt"
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="#3949AB" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:textColorHint="#609097"
            android:textColor="#3949AB"
            android:fontFamily="@font/abeezee"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edt"
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLength="30" />

        <ImageButton
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/show_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/ic_visibility_off"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </RelativeLayout>

    <Button
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:padding="12dp"
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:text="@string/sign_up_policy"
        android:textColor="#BDB4B4"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>