<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@drawable/wave"
        >

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/bg" />

        <TextView
            android:fontFamily="@font/abeezee"
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textColor="#00cba9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:fontFamily="@font/abeezee"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/custom_edt"
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#609097"
            android:textColor="#3949AB" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <EditText
                android:textColorHint="#609097"
                android:textColor="#3949AB"
                android:fontFamily="@font/abeezee"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_edt"
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="30" />

            <ImageButton
                android:layout_centerVertical="true"
                android:id="@+id/show_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:background="@null"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_visibility_off"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <CheckBox
                android:fontFamily="@font/abeezee"
                android:paddingLeft="10dp"
                android:button="@drawable/custom_checkbox"
                android:id="@+id/remember_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintain_login"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#00cba9" />

            <TextView
                android:fontFamily="@font/abeezee"
                android:paddingLeft="15dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:id="@+id/khoiphucmk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/forgot_password"
                android:textColor="#00cba9"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:fontFamily="@font/abeezee"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:padding="10dp"
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="@font/abeezee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/sign_up_text"
                android:textColor="#8E8E8E"
                android:textStyle="bold"
                />
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:fontFamily="@font/abeezee"
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/title_pleaseregister"
                android:textStyle="bold"
                android:textColor="#00cba9"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
