<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/wave">

    <ImageView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="start"
        android:src="@drawable/bg_changepass" />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_pass_title"
        android:textColor="#00cba9"
        android:fontFamily="@font/abeezee"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:fontFamily="@font/abeezee"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edt"
            android:id="@+id/oldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:maxLength="30" />

        <ImageButton
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/show_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:src="@drawable/ic_visibility_off"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </RelativeLayout>

    <EditText
        android:fontFamily="@font/abeezee"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edt"
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:maxLength="30" />

    <EditText
        android:fontFamily="@font/abeezee"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edt"
        android:id="@+id/xacnhan_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_newpass"
        android:inputType="textPassword"
        android:maxLength="30" />

    <Button
        android:layout_gravity="center"
        android:fontFamily="@font/abeezee"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:padding="12dp"
        android:id="@+id/capnhat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/update_pass"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>